# GDR-converter

./: .gitignore  CMakeLists.txt
include/: gdr_convert.hpp
test/: main.cpp  test.gdr
